// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TechList> should render component 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "flex": 1,
      "margin": 10,
      "overflow": "hidden",
    }
  }
>
  <RCTScrollView
    collapsable={false}
    maintainVisibleContentPosition={
      {
        "minIndexForVisible": 0,
      }
    }
    onScroll={[Function]}
    scrollEventThrottle={0.0001}
  >
    <View>
      <View
        style={
          {
            "height": 0,
            "left": 0,
            "position": "absolute",
            "top": 1000000,
          }
        }
      />
      <View
        style={
          {
            "height": 0,
            "width": undefined,
          }
        }
      />
      <View
        style={
          {
            "height": 0,
            "marginLeft": undefined,
            "marginTop": 0,
            "opacity": 1,
            "width": undefined,
          }
        }
      >
        <View
          index={0}
          onLayout={[Function]}
          style={
            {
              "flexDirection": "column",
              "height": undefined,
              "left": 0,
              "maxHeight": undefined,
              "maxWidth": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text>
            <div>
              Test 1
            </div>
          </Text>
        </View>
        <View
          index={1}
          onLayout={[Function]}
          style={
            {
              "flexDirection": "column",
              "height": undefined,
              "left": 0,
              "maxHeight": undefined,
              "maxWidth": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text>
            <div>
              Test 2
            </div>
          </Text>
        </View>
        <View
          index={2}
          onLayout={[Function]}
          style={
            {
              "flexDirection": "column",
              "height": undefined,
              "left": 0,
              "maxHeight": undefined,
              "maxWidth": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text>
            <div>
              Test 3
            </div>
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<TechList> should render component with props 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "flex": 1,
      "margin": 10,
      "overflow": "hidden",
    }
  }
>
  <RCTScrollView
    collapsable={false}
    maintainVisibleContentPosition={
      {
        "minIndexForVisible": 0,
      }
    }
    onScroll={[Function]}
    scrollEventThrottle={0.0001}
  >
    <View>
      <View
        style={
          {
            "height": 0,
            "left": 0,
            "position": "absolute",
            "top": 1000000,
          }
        }
      />
      <View
        style={
          {
            "height": 0,
            "width": undefined,
          }
        }
      />
      <View
        style={
          {
            "height": 0,
            "marginLeft": undefined,
            "marginTop": 0,
            "opacity": 1,
            "width": undefined,
          }
        }
      >
        <View
          index={0}
          onLayout={[Function]}
          style={
            {
              "flexDirection": "column",
              "height": undefined,
              "left": 0,
              "maxHeight": undefined,
              "maxWidth": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 20,
              }
            }
          >
            <div>
              Test 1
            </div>
          </Text>
        </View>
        <View
          index={1}
          onLayout={[Function]}
          style={
            {
              "flexDirection": "column",
              "height": undefined,
              "left": 0,
              "maxHeight": undefined,
              "maxWidth": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 20,
              }
            }
          >
            <div>
              Test 2
            </div>
          </Text>
        </View>
        <View
          index={2}
          onLayout={[Function]}
          style={
            {
              "flexDirection": "column",
              "height": undefined,
              "left": 0,
              "maxHeight": undefined,
              "maxWidth": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 20,
              }
            }
          >
            <div>
              Test 3
            </div>
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
